Adicionando o script do contato e as labels

--- a/contato.html
+++ b/contato.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contato</title>
 </head>
 <body>
-    
+    <label>Nome:</label>
+    <input type="text" id="name">
+
+    <label>Telefone:</label>
+    <input type="number" id="number">
+
+    <label>Email:</label>
+    <input type="email" id="email">
+
+    <button type="submit"></button>
 </body>
 </html>
