--- a/contato.html
+++ b/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,6 @@
     <label>Email:</label>
     <input type="email" id="email">
 
-    <button type="submit"></button>
+    <button type="submit" onclick="cadastrar()">Cadastrar</button>
 </body>
 </html>
