Adicionando validação no formulário

--- a/contato.html
+++ b/contato.html
@@ -17,5 +17,6 @@
     <input type="email" id="email">
 
     <button type="submit" onclick="cadastrar()">Cadastrar</button>
+    <script src="contato.js"></script>
 </body>
 </html>
