--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
 <body>
+    <header>
+        <h1 class="titulo">Vinhacity</h1>
+        <a href="index.html" class="menu">Home</a>
+        <a href="contato.html" class="menu">Contato</a>
+        <a href="#" class="menu">Quiz</a>
+
+    </header>
     
 
 <script src="index.js"></script>
