--- a/contato.html
+++ b/contato.html
@@ -19,17 +19,18 @@
 
     </header>
 <div class="formulario">
-    <label>Nome:</label>
-    <input type="text" id="name">
+    <label class="categoria">Nome:</label>
+    <input type="text" id="name" >
 
-    <label>Telefone:</label>
+    <label class="categoria">Telefone:</label>
     <input type="number" id="number">
 
-    <label>Email:</label>
+    <label class="categoria">Email:</label>
     <input type="email" id="email">
 
     <button type="submit" onclick="cadastrar()">Cadastrar</button>
 </div>
+<footer>@-Todos os direitos reservados</footer>
     <script src="contato.js"></script>
 </body>
 </html>
