--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
         <a href="index.html" class="menu">Home</a>
         <a href="contato.html" class="menu">Contato</a>
         <a href="#" class="menu">Quiz</a>
-
     </header>
-    
+    <div class="conteudo-principal">
+        <div class="texto-principal">
+            <h1>Vinheria Agnello</h1>
+            <p>A nossa vinheria busca atender todo tipo de cliente desde o mais casual até o mais refinado
+                proporcionando produtos de alta qualidade por um preço acessível, além de um atendimento capaz de fazer com que 
+                qualquer pessoa sinta-se segura ao escolher o tipo de vinho que deseja mesmo sem ter nenhum conhecimento sobre o
+                assunto
+            </p>
+        </div>    
+        <img src="vinhos.jpg" class="vinho">
+    </div>
 
+    <footer>@-Todos os direitos reservados</footer>
 <script src="index.js"></script>
 </body>
 </html>
