--- a/quiz.html
+++ b/quiz.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Quiz</title>
 </head>
 <body>
+    <header>
+        <h1 class="titulo_quiz">Vinhacity Quiz</h1>
+        <a href="index.html" class="menu">Home</a>
+        <a href="sobre.html" class="menu">Sobre</a>
+        <a href="contato.html" class="menu">Contato</a>
+        <a href="quiz.html" class="menu">Quiz</a>
+    </header>
     
+<script src="quiz.js"></script>
 </body>
 </html>
