Terminando de estilizar  as páginas quiz e sobre

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <h1 class="titulo">Vinhacity</h1>
         <a href="index.html" class="menu">Home</a>
         <a href="contato.html" class="menu">Contato</a>
-        <a href="#" class="menu">Quiz</a>
+        <a href="quiz.html" class="menu">Quiz</a>
+        <a href="sobre.html" class="menu">Sobre</a>
     </header>
     <div class="conteudo-principal">
         <div class="texto-principal">
