--- a/sobre.html
+++ b/sobre.html
@@ -12,25 +12,28 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo_sobre">Sobre Vinhacity</h1>
+        <h1 class="titulo_sobre">Vinhacity</h1>
         <a href="index.html" class="menu">Home</a>
         <a href="sobre.html" class="menu">Sobre</a>
         <a href="contato.html" class="menu">Contato</a>
         <a href="quiz.html" class="menu">Quiz</a>
     </header>
     <div class="conteudo-sobre">
-        <div class="texto-sobre1">
-            <h1>Nosso site</h1>
-            <p>
-                A vinheria acaba de dar um grande passo ao abrir seu site. Isso significa que agora seus clientes podem navegar pelo inventário de vinhos e comprar produtos online, oferecendo mais conveniência e acessibilidade para seus clientes.
-            </p>
+        <div class="dois-textos">
+            <div class="texto-sobre1">
+                <h1>Nosso site</h1>
+                <p>
+                    A vinheria acaba de dar um grande passo ao abrir seu site. Isso significa que agora seus clientes podem navegar pelo inventário de vinhos e comprar produtos online, oferecendo mais conveniência e acessibilidade para seus clientes.
+                </p>
+            </div>
+            <div class="texto-sobre2">
+                <h1>Novidades</h1>
+                <p>
+                    Com o novo site, a vinheria pode oferecer informações mais detalhadas sobre seus produtos, incluindo notas de degustação, avaliações de especialistas, história do vinho e muito mais. Isso ajuda a educar os clientes e os torna mais informados sobre suas escolhas de vinho.
+                </p>
+            </div>
         </div>
-        <div class="texto-sobre2">
-            <h1>Novidades</h1>
-            <p>
-                Com o novo site, a vinheria pode oferecer informações mais detalhadas sobre seus produtos, incluindo notas de degustação, avaliações de especialistas, história do vinho e muito mais. Isso ajuda a educar os clientes e os torna mais informados sobre suas escolhas de vinho.
-            </p>
-        </div>
+    <div class="dois-textos">
         <div class="texto-sobre3">
             <h1>Detalhes</h1>
             <p>
@@ -43,6 +46,8 @@
                 Com a presença online, a vinheria agora tem a oportunidade de expandir sua base de clientes além da localidade física, alcançando potencialmente um público mais amplo. Isso pode ajudar a aumentar as vendas e expandir os negócios.
             </p>
         </div>
+    </div>
+    <div class="dois-textos">
         <div class="texto-sobre5">
             <h1>Comunicação</h1>
             <p>
@@ -55,6 +60,7 @@
                 A vinheria pode usar dados de análise do site para rastrear o comportamento do cliente, incluindo o que os clientes estão comprando, como estão navegando no site e quanto tempo estão gastando nele. Essas informações podem ajudar a vinheria a ajustar suas estratégias de marketing e vendas para melhor atender às necessidades de seus clientes.
             </p>
         </div>
+    </div>
     </div>
     
     <footer>@-Todos os direitos reservados</footer>
