--- a/quiz.html
+++ b/quiz.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo_quiz">Vinhacity Quiz</h1>
+        <h1 class="titulo_quiz">Vinhacity</h1>
         <a href="index.html" class="menu">Home</a>
-        <a href="sobre.html" class="menu">Sobre</a>
         <a href="contato.html" class="menu">Contato</a>
         <a href="quiz.html" class="menu">Quiz</a>
+        <a href="sobre.html" class="menu">Sobre</a>
     </header>
     
 <script src="quiz.js"></script>
