Adicionando botao de mudar a cor do background

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <h1 class="titulo">Vinhacity</h1>
         <a href="index.html" class="menu">Home</a>
+        <a href="sobre.html" class="menu">Sobre</a>
         <a href="contato.html" class="menu">Contato</a>
         <a href="quiz.html" class="menu">Quiz</a>
-        <a href="sobre.html" class="menu">Sobre</a>
     </header>
     <div class="conteudo-principal">
         <div class="texto-principal">
@@ -29,7 +29,11 @@
         </div>    
         <img src="vinhos.jpg" class="vinho">
     </div>
-
+    <div class="botoes">
+        <button onclick="changeColor('black')">Preto</button>
+        <button onclick="changeColor('purple')">Roxo</button>
+        <button onclick="changeColor('grey')">Cinza</button>
+    </div>
     <footer>@-Todos os direitos reservados</footer>
 <script src="index.js"></script>
 </body>
