alteraçoes/arrumar quiz

--- a/contato.html
+++ b/contato.html
@@ -12,13 +12,11 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo">Vinhacity</h1>
+        <h1 class="titulo">Contato Vinhacity</h1>
         <a href="index.html" class="menu">Home</a>
         <a href="sobre.html" class="menu">Sobre</a>
         <a href="contato.html" class="menu">Contato</a>
         <a href="quiz.html" class="menu">Quiz</a>
-        
-
     </header>
 <div class="formulario">
     <label class="categoria">Nome:</label>
