--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div class="conteudo-principal">
         <div class="texto-principal">
             <h1>Vinheria Agnello</h1>
-            <p>A nossa vinheria busca atender todo tipo de cliente desde o mais casual até o mais refinado
-                proporcionando produtos de alta qualidade por um preço acessível, além de um atendimento capaz de fazer com que 
-                qualquer pessoa sinta-se segura ao escolher o tipo de vinho que deseja mesmo sem ter nenhum conhecimento sobre o
-                assunto
+            <p>A nossa vinheria busca atender todo tipo de cliente, desde o mais casual até o mais refinado,
+                proporcionando produtos de alta qualidade por um preço acessível, além de um atendimento capaz de fazer 
+                qualquer pessoa se sentir segura ao escolher o tipo de vinho que deseja, mesmo sem ter nenhum conhecimento sobre o
+                assunto.
             </p>
         </div>    
         <img src="vinhos.jpg" class="vinho">
