--- a/sobre.html
+++ b/sobre.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1 class="titulo_sobre">Vinhacity</h1>
+        <h1 class="titulo_sobre">Sobre Vinhacity</h1>
         <a href="index.html" class="menu">Home</a>
         <a href="sobre.html" class="menu">Sobre</a>
         <a href="contato.html" class="menu">Contato</a>
