--- a/quiz.html
+++ b/quiz.html
@@ -11,111 +11,19 @@
     <title>Quiz</title>
 </head>
 <body>
-    <header>
+    <header class="header-quiz">
         <h1 class="titulo_quiz">Quiz Vinhacity</h1>
         <a href="index.html" class="menu">Home</a>
         <a href="sobre.html" class="menu">Sobre</a>
         <a href="contato.html" class="menu">Contato</a>
         <a href="quiz.html" class="menu">Quiz</a>
-        
     </header>
-    <div class="conteudo-quiz">
-        <div class="apresentacao-quiz">
-            <h1>Vamos testar seu conhecimento sobre vinhos!</h1>
-        </div>    
-    </div>
-    <div class="quiz">
-        <div class="duas-perguntas">
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-    </div>
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-        <div class="duas-perguntas">
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-    </div>
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-        <div class="duas-perguntas">
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-    </div>
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-        <div class="duas-perguntas">
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-    </div>
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-        <div class="duas-perguntas">
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-    </div>
-            <div class="question">Qual é a capital do Brasil?</div>
-            <div class="options">
-                <div class="option">Elefante</div>
-                <div class="option">Girafa</div>
-                <div class="option">Rinoceronte</div>
-                <div class="option">Hipopótamo</div>
-            </div>
-        </div>
-        
+<div class="texto-resultado">
+    <h1>Resultado:</h1>
+    <div id="resultado"></div>
+</div>
+
+    <footer>@-Todos os direitos reservados</footer>
 <script src="quiz.js"></script>
 </body>
 </html>
